--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
       <button type="button" class="btn btn-primary" onclick="addBichoToJogo()">Prosseguir</button>
     </div>
 
-    <div class="page-three" style="display: block;">
+    <!-- <div class="page-three" style="display: block;">
       <div class="row">
         <table class="table">
           <thead>
@@ -145,7 +145,7 @@
           </tbody>
         </table>
       </div>
-    </div>
+    </div> -->
 
     <div class="page-loading" style="display:none;">
       <div class="row">
